Delete blog post
